<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.sign_in.SignUpFragment">

    <EditText
        android:id="@+id/fieldEmail2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/hint_email"
        android:gravity="center"
        android:ellipsize="start"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/fieldConfirmPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fieldPassword2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:gravity="center"
        android:ellipsize="start"
        app:layout_constraintBottom_toTopOf="@+id/fieldConfirmPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldEmail2" />

    <EditText
        android:id="@+id/fieldConfirmPassword2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:gravity="center"
        android:ellipsize="start"

        app:layout_constraintBottom_toTopOf="@+id/emailCreateAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       />

    <Button
        android:id="@+id/emailCreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />
</androidx.constraintlayout.widget.ConstraintLayout>